# JMEquipmentCRM

./: .gitignore  Client_Import_Wizard.html  DATA_BOUNDARIES.md  DEPLOYMENT_CHECKLIST.md  Filter_Sort_UI.html  IMPLEMENTATION_PLAN_REVISED.md  LAUNCH.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_STATE_AUDIT.md  README.md  README_FINAL.txt  RISK_REGISTER.md  SECURITY_NOTES.md  index.html  main.js  main.jsx  package.json
finance-system/: .gitignore  README.md  pyproject.toml
finance-system/docs/: CALCULATION_REFERENCE.md  CHANGELOG.md  DATA_DICTIONARY.md  FIVE_EXCHANGE_DELIVERY.md  KNOWN_LIMITATIONS.md  OPERATOR_GUIDE.md  THREAT_MODEL.md
finance-system/finance_system/: __init__.py  audit.py  batch_report.py  cli.py  conflicts.py  costing.py  db.py  dedup.py  demo.py  evidence.py  exception_register.py  export.py  formulas.py  ids.py  imports.py  mapping.py  models.py  money.py  normalize.py  parsing.py  pipeline.py  policies.py  posting.py  reconcile.py  reporting.py  resolution.py  scanner.py  scope.py  smoke.py  snapshots.py  staging.py  verification.py
finance-system/fixtures/: README.md  sample_month.json  sample_month_v2.csv
finance-system/scripts/: install-safety-hook.sh  safety_scan.py
finance-system/tests/: helpers.py  test_bridges.py  test_cli.py  test_confidentiality.py  test_db.py  test_dedup.py  test_exceptions.py  test_formulas.py  test_imports.py  test_intake.py  test_integrity_manifest.py  test_lifecycle.py  test_mapping.py  test_money.py  test_posting_transactional.py  test_profitability.py  test_reconcile_report.py  test_resolution.py  (+7 more)
(+149 files in other folders)
